--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.2.0",
     "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.6",
+    "react-scroll": "^1.7.4",
     "react-sparklines": "^1.7.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
