--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^5.0.6",
     "react-scroll": "^1.7.4",
     "react-sparklines": "^1.7.0",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "reset-css": "^2.2.1"
