--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-font-face": "^0.2.1",
     "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.6",
     "react-scroll": "^1.7.4",
@@ -21,6 +22,7 @@
     "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "reset-css": "^2.2.1"
   },
   "scripts": {
